Add esvect package for displaying vectors more nicely, drop unused packages

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -33,16 +33,17 @@
 \usepackage{graphicx}                                                   % integration of images
 \usepackage{float}                                                      % floating objects
 \usepackage[font={footnotesize,it}]{caption}                            % for captions of figures and tables
-\usepackage{booktabs}                                                  % package for nicer tables
-% \usepackage{tabu}                                                       % package for tables
+\usepackage{booktabs}                                                   % package for nicer tables
 \usepackage{tocvsec2}                                                   % provides means of controlling the sectional numbering
-\usepackage[square,sort,comma,authoryear]{natbib}                       % provides various citation styles
+\usepackage{natbib}                                                     % provides various citation styles
 \usepackage{wrapfig}                                                    % provides floating of text around images
 \usepackage{nameref}                                                    % provides printing names of references
 \usepackage{colortbl}                                                   % Colored tables
 \usepackage{scrhack}                                                    % Remove float errors and warnings
 \usepackage{pgfgantt}                                                   % Provides GANTT charts
-\usepackage{array}
+\usepackage{array}                                                      % ?
+\usepackage{esvect}                                                     % Provides nicer vector display in math mode
+
 %---------------------------------------------------------------------------
 
 % Load Math Packages
