Change bibliography style from unsrtnat to alpha

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -310,7 +310,7 @@
 %\cleardoublepage
 \phantomsection{}
 \addcontentsline{toc}{chapter}{Literaturverzeichnis}
-\bibliographystyle{unsrtnat}
+\bibliographystyle{alpha}
 \bibliography{inc/static/bibliography}{}
 %---------------------------------------------------------------------------
 
