Fix wrong text display for text within formula

--- a/doc/inc/51_illumination_models.tex
+++ b/doc/inc/51_illumination_models.tex
@@ -32,7 +32,7 @@ Als Beispiel für ein lokales Beleuchtungsmodell dient das Phong-Beleuchtungsmod
 
 Es beschreibt die reflektierte (Licht-) Intensität als Zusammensetzung aus der ambienten, der diffusen und der ideal spiegelnden Reflexion einer Oberfläche:
 \begin{gather}
-    I = I_{ambient} + I_{diffuse} + I_{specular} + I_{emissive}
+    I = I_{\text{ambient}} + I_{\text{diffuse}} + I_{\text{specular}} + I_{\text{emissive}}
 \end{gather}
 oder mathematisch ausgedrückt:
 \begin{gather}
