Remove todo for explaining view plane, introduce another word for view plane

--- a/doc/inc/51_illumination_models.tex
+++ b/doc/inc/51_illumination_models.tex
@@ -100,13 +100,13 @@ Bei globalen Beleuchtungsmodellen unterscheidet man zwischen
 blickwinkelabhängigen Algorithmen, wie etwa Ray Tracing, und zwischen
 blickwinkelunabhängigen Algorithmen, wie etwa Photon Mapping.
 
-Blickwinkelabhängige Algorithmen verwenden eine Diskretisierung~\todo{view
-    plane} der sichtbaren Fläche um zu entscheiden, an welchen Punkten, in
-Blickrichtung des Betrachters, die Beleuchtungsberechnung durchgeführt werden
-soll. Blickwinkelunabhängige Algorithmen hingegen diskretisieren und
-verarbeiten die Umgebung um genügend Informationen für die
-Beleuchtungsberechnung zu haben. Dies erlaubt ihnen die Beleuchtungsberechnung
-an einem beliebigen Punkt aus einer beliebigen Blickrichtung.
+Blickwinkelabhängige Algorithmen verwenden eine Diskretisierung der sichtbaren
+Fläche bzw. Bildfläche um zu entscheiden, an welchen Punkten, in Blickrichtung
+des Betrachters, die Beleuchtungsberechnung durchgeführt werden soll.
+Blickwinkelunabhängige Algorithmen hingegen diskretisieren und verarbeiten die
+Umgebung um genügend Informationen für die Beleuchtungsberechnung zu haben.
+Dies erlaubt ihnen die Beleuchtungsberechnung an einem beliebigen Punkt aus
+einer beliebigen Blickrichtung.
 
 Beide Arten von Algorithmen haben jedoch Vor- und Nachteile. So sind
 blickwinkelabhängige Algorithmen gut geeignet um Spiegelungen, basierend auf
