Move sphere example todo to its right place, remove (now) obsolete todos

--- a/doc/inc/52_surfaces.tex
+++ b/doc/inc/52_surfaces.tex
@@ -23,6 +23,8 @@ Parametrische Modellierung und implizite Modellierung.\\
 Bei der parametrsichen Darstellung wird eine Oberfläche überlicherweise als
 eine Menge von Punkten definiert, so zum Beispiel:
 
+\todo[inline]{Provide example by means of a sphere}
+
 \begin{gather}\label{eq:surface_parametric}
     \bm{p}(s, t) = (x(s, t), y(s, t), z(s, t))
 \end{gather}
@@ -40,8 +42,6 @@ Oberfläche. Die implizite Darstellung erlaubt hingegen eine grössere
 Einflussnahme aus mathematischer Sicht und ist daher sehr nützlich für
 Operationen wie Biegung, Vermischung, Schnitte (Intersektion) oder Bool'sche
 Operationen.
-
-\todo[inline]{Meh. Not sure if intro is good enough.}
 
 \subsection{Implizite Oberflächen}
 \label{subsec:implicit_surfaces}
@@ -103,7 +103,6 @@ werden, um quadrische implizite Oberflächen.
 
 \cite{hart_sphere_1994} gibt weiter an, dass --- unter Nuztung einer Metrik ---
 die Einheitskugel durch die implizite Gleichung
-\todo[inline]{Provide example by means of a sphere}
 
 \begin{gather} \label{eq:surface_immplicit_geometric}
     \|\bm{x}\| - 1 = 0
@@ -178,7 +177,7 @@ dann ist $f$ eine \textit{vorzeichenabhängige Distanzfunktion (signed distance
 \subsubsection{Distanzfelder (distance fields)}
 \label{ssubsec:distance_fields}
 
-\todo[inline]{Introduce distance fields.}
+\todo[inline]{Introduce distance fields?}
 
 \section{Darstellung von impliziten Oberflächen}
 \label{sec:rendering_implicit_surfaces}
