Rewrite euclidean metric to a more common way, due to the advice from Mr. Fuhrer

--- a/doc/inc/52_surfaces.tex
+++ b/doc/inc/52_surfaces.tex
@@ -118,9 +118,8 @@ Gleichung~\ref{eq:surface_implicit} zu folgender Gleichung führt:
     f(\bm{x}) = \|\bm{x}\| - 1
 \end{gather}
 
-\todo[inline]{Change notation}  %(x^2 + y^2 + z^2)^{1/2}% as this allows the usage of any basis, e.g.\ ln
 
-Dabei ist $\|\bm{x}\|$ als euklidische Metrik definiert und entspricht $\sqrt{x^{2} + y^{2} + z^{2}}$.\\
+Dabei ist $\|\bm{x}\|$ als euklidische Metrik definiert und entspricht ${(x^{2} + y^{2} + z^{2})}^{1 \over 2}$.\\
 \\
 Die Gleichung~\ref{eq:surface_immplicit_algebraic} gibt die algebraische
 Distanz zurück, Gleichung~\ref{eq:surface_immplicit_geometric} gibt die
