--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -2,186 +2,8 @@
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
 % chktex-file 27 - disable warning about missing include files
 
-\section{Oberflächen}
-\label{sec:surfaces}
-
-Sofern nicht anders vermerkt, basiert der folgende Abschnitt
-auf~\cite{division_introduction_1996}[S. 1 ff].\\
-\\
-Um in Computergrafiken überhaupt etwas darstellen zu können, muss erst einmal
-definiert werden, was dargestellt werden soll. Häufig orientiert sich die
-Computergrafik dabei an der realen Welt.  In der realen Welt haben Oberlächen
-von Objekten häufig keine starken Übergänge (Kanten) sondern sind eher von
-glatter Natur~\cite{foley_computer_1996}[S. 471].\\
-\\
-Die Darstellung von Kurven und Oberflächen führt zu zwei Fällen: Modellierung
-von bestehenden Objekten und Modellierung von Grund auf.\\
-\\
-Zur Modellierung von Oberflächen werden hauptsächlich zwei Techniken verwendet:
-Parametrische Modellierung und implizite Modellierung.\\
-\\
-Bei der parametrsichen Darstellung wird eine Oberfläche überlicherweise als
-eine Menge von Punkten definiert, so zum Beispiel:
-
-\todo[inline]{Provide example by means of a sphere}
-
-\begin{gather}\label{eq:surface_parametric}
-    \bm{p}(s, t) = (x(s, t), y(s, t), z(s, t))
-\end{gather}
-
-Bei der impliziten Darstellung wird eine Oberfläche überlicherweise als Kontur
-einer Funktion mit Wert 0 definiert, so zum Beispiel:
-
-\begin{gather}\label{eq:surface_implicit}
-    f(\bm{p}) = f(x, y, z) = 0
-\end{gather}
-
-Die parametrische Darstellung bringt Vorteile wie die Unabhängigkeit von einem
-Koordinatensystem oder eine effiziente Berechnung von Punkten auf einer
-Oberfläche. Die implizite Darstellung erlaubt hingegen eine grössere
-Einflussnahme aus mathematischer Sicht und ist daher sehr nützlich für
-Operationen wie Biegung, Vermischung, Schnitte (Intersektion) oder Bool'sche
-Operationen.
-
-\subsection{Implizite Oberflächen}
-\label{subsec:implicit_surfaces}
-
-Wie in Gleichung~\ref{eq:surface_parametric} beschrieben, ist eine implizite
-Oberfläche gemäss~\cite{hart_ray_1993}[S. 1] als Funktion $ f(\bm{x}) =
-\mathbb{R}^{3} \to \mathbb{R} $ definiert.  Es wird also jedem Punkt einer
-Menge $ \bm{p} \in \mathbb{R}^{3} $ ein skalarer Wert $ s \in \mathbb{R} $
-zugewiesen. Dabei besteht die Oberfläche aus der Punktemenge $ \bm{x} \equiv
-(x, y, z) \in \mathbb{R}^{3} $.\\
-\\
-Angenommen $ \bm{A} $ ist ein geschlossener Festkörper, welcher durch die
-Funktion $f$ beschrieben wird, dann kann gemäss~\cite{hart_ray_1993} Folgendes
-angenommen werden:
-
-\begin{align} \label{eq:surface_implicit_condition}
-    x \in \overset{\circ}{\bm{A}} \Leftrightarrow f(\bm{x}) &< 0 \\
-    x \in \partial \bm{A}         \Leftrightarrow f(\bm{x}) &= 0 \\
-    x \in \mathbb{R}^{3} - \bm{A} \Leftrightarrow f(\bm{x}) &> 0
-\end{align}
-
-Dies bedeutet, dass sich ein Punkt $\bm{x}$:
-\begin{itemize}
-    \item $\overset{\circ}{\bm{A}}$, genau dann \textit{innerhalb} des Körpers
-        $\bm{A}$ befindet, wenn die implizite Funktion $f(\bm{x})$ \textit{negativ}
-        ist
-    \item $\partial{\bm{A}}$, genau dann \textit{auf der Oberfläche} des
-        Körpers $\bm{A}$ befindet, wenn die implizite Funktion $f(\bm{x})$
-        \textit{0} ist
-    \item $\mathbb{R}^{3} - \bm{A}$, \textit{nicht in oder auf} dem Körper
-        $\bm{A}$ befindet, wenn die implizite Funktion $f(\bm{x})$ \textit{positiv}
-        ist
-\end{itemize}
-
-Dies gilt, da es sich bei $ \bm{x} $ um eine Punktemenge mit topologischer
-Struktur handelt.\\
-\\
-Gemäss~\cite{division_introduction_1996} finden hauptsächlich drei Methoden
-Anwendung zur Beschreibung impliziter Oberflächen: algebraische Oberflächen,
-Blobby-Objekte sowie die funktionale Repräsentation.~\cite{hart_sphere_1994}
-gibt jedoch an, dass die gebräuchlichste Form von impliziten Oberflächen die
-algebraischen Oberflächen sind. Diese werden implizit durch polynomiale
-Funktionen definiert.\\
-
-\subsubsection{Algebraische und geometrische implizite Oberflächen}
-\label{ssubsec:implicit_surfaces_algebraic_geometric}
-
-Ein Beispiel für eine algebraische Oberfläche ist die Beschreibung der
-Einheitskugel anhand einer impliziten algebraischen Gleichung zweiten Grades:
-
-\begin{gather} \label{eq:surface_immplicit_algebraic}
-    x^{2} + y^{2} + z^{2} - 1 = 0
-\end{gather}
-
-Wobei es sich bei dem letzten Parameter um den Radius $r$ handelt, welcher ---
-bedingt durch die Einheitskugel --- den Wert 1 hat.
-
-Wie~\cite{division_introduction_1996} schreibt, handelt es sich bei impliziten
-Oberflächen, welche durch eine polynomiale Funktion zweiten Grades beschrieben
-werden, um quadrische implizite Oberflächen.
-
-\cite{hart_sphere_1994} gibt weiter an, dass --- unter Nuztung einer Metrik ---
-die Einheitskugel durch die implizite Gleichung
-
-\begin{gather} \label{eq:surface_immplicit_geometric}
-    \|\bm{x}\| - 1 = 0
-\end{gather}
-
-beschrieben werden kann, was unter Anwendung der allgemeinen
-Form~\ref{eq:surface_implicit} einer impliziten
-Gleichung~\ref{eq:surface_implicit} zu folgender Gleichung führt:
-
-\begin{gather}\label{eq:surface_implicit_sphere}
-    f(\bm{x}) = \|\bm{x}\| - 1
-\end{gather}
-
-
-Dabei ist $\|\bm{x}\|$ als euklidische Metrik definiert und entspricht ${(x^{2} + y^{2} + z^{2})}^{1 \over 2}$.\\
-\\
-Die Gleichung~\ref{eq:surface_immplicit_algebraic} gibt die algebraische
-Distanz zurück, Gleichung~\ref{eq:surface_immplicit_geometric} gibt die
-geometrische Distanz zurück.\\
-
-\subsubsection{Distanzfunktionen}
-\label{ssubsec:distance_functions}
-
-Gemäss~\cite{hart_sphere_1994} wird die geometrische Darstellung von
-quadrischen Oberflächen bevorzugt, da deren Parameter unabhängig von
-Koordinaten sind, sie robuster und intuitiver sind. Es handelt sich dabei um
-eine \textbf{Distanzfunktion}.\\
-\\
-Wie anfangs erwähnt, definiert~\cite{hart_sphere_1994} die allgemeine Form zur
-Beschreibung bzw. Darstellung von impliziter Oberflächen als Zuweisung von
-Punkten zu einem skalaren Wert: $ f : \mathbb{R}^{n} \to \mathbb{R} $.\\
-\\
-Unter Anwendung der unter~\ref{eq:surface_implicit_condition} definierten
-Bedingungen kann geschlossen werden, dass eine Menge von Punkten $A$ existiert,
-welche Teil von $\mathbb{R}^{n}$, also $A \subset \mathbb{R}^{n}$ ist. Dies heisst, dass alle Punkte in $A$ die folgende Bedingung erfüllen:
-
-\begin{gather}
-    A = \{ x : f(x) \leq 0 \}
-\end{gather}
-
-\cite{hart_sphere_1994} liefert zwei Definition, welche der Beschreibung von Distanzfunktionen dienen:
-
-\theoremstyle{definition}
-\begin{definition}{\label{theo:point_to_set_distance}
-    \textit{Point-to-set distance}}\\
-    Die Distanz eines Punktes zu einer Menge von Punkten definiert die Distanz
-    eines Punktes $ \bm{x} \in \mathbb{R}^{3} $ zu einer Menge von Punkten $A
-    \subset \mathbb{R}^{3}$ als Distanz von $\bm{x}$ zum nähesten Punkt in $A$:
-
-    \begin{gather}
-        d(\bm{x}, \bm{A}) = \min_{\substack{\bm{y} \in \bm{A}}}(\|\bm{x} - \bm{y}\|)
-    \end{gather}
-\end{definition}
-
-\theoremstyle{definition}
-\begin{definition}{\label{theo:signed_distnace_bound}
-    \textit{Signed distance bound}}\\ 
-    Eine Funktion $ f : \mathbb{R}^{3} \to \mathbb{R} $ ist eine
-    vorzeichenabhängige Obergrenze ihrer impliziten Oberfläche $ f^{-1}(0)$,
-    wenn gilt:
-
-    \begin{gather}\label{eq:signed_distnace_bound}
-        |f(\bm{x})| \leq d(\bm{x}, f^{-1}(0))
-    \end{gather}
-\end{definition}
-
-Wenn die Gleichung~\ref{eq:signed_distnace_bound} für eine Funktion $f$ gilt,
-dann ist $f$ eine \textit{vorzeichenabhängige Distanzfunktion (signed distance
-    function)}.
-
-\subsubsection{Distanzfelder (distance fields)}
-\label{ssubsec:distance_fields}
-
-\todo[inline]{Introduce distance fields?}
-
 \section{Darstellung von impliziten Oberflächen}
-\label{sec:rendering_implicit_surfaces}
+\label{sec:description_implicit_surfaces}
 
 Wie~\cite{hart_sphere_1994}[S. 1] angibt, existieren verschiedene Möglichkeiten
 zur Darstellung (zum Rendering) von impliziten Oberflächen. So wandeln
@@ -377,7 +199,7 @@ Kugel (Gleichung~\ref{eq:surface_immplicit_geometric}).\\
 Evaluiert man nun die Gleichung $F(t)$ unter Anwendung der eben beschriebenen
 Strahlenverfolgung, findet man so die erste positive Nullstelle der Gleichung
 $F(t)$. Diese Nullstelle ist die Grenze der Folge von negativen Hüllkörpern
-(``unbounding spheres''), welche durch die rekursive Gleichung
+(``unbounding spheres''), welche durch die rekursive Gleichung:
 
 \begin{gather}
     t_{i+1} = t_{i} + F(t_{i})
@@ -416,3 +238,216 @@ def sphere_trace():
 \end{lstlisting}
 \footnotetext{Algorithmus in Pseudocode gemäss~\cite{hart_sphere_1994}[S. 531,
     Fig. 1]}
+
+\subsection{Operationen für implizite Oberflächen}
+\label{subsec:implicit_surfaces_ops}
+
+Um mit impliziten Oberflächen nicht nur einfache Objekte, wie zum Beispiel eine
+Kugel darzustellen, möchte man diese auch transformieren können.
+
+Wie~\cite{hart_sphere_1994}[S. 543] beschreibt, werden implizite Oberflächen
+durch die Invertierung des Raumes, in welchem sich die Oberfläche befindet,
+transformiert. Der Raum, in dem sich eine implizite Oberfläche befindet, ist
+die Domäne der impliziten Funktion der Oberfläche.
+
+Sei $T(\bm{x})$ eine Transformation und $f(\bm{x})$ eine Distanzfunktion,
+welche eine implizite Oberfläche definiert. Somit ist die transfomierte
+implizite Oberfläche:
+
+\begin{gather}
+    f(T^{-1}(\bm{x})) = 0
+\end{gather}
+
+Bei Transformationen handelt es sich um vorzeichenabhängige Distanzfunktion
+(signed distance functions).
+
+Es werden dabei folgende Arten von Transformationen unterschieden:
+\begin{itemize}
+    \item Distanzoperationen, wie zum Beispiel Vereinigung, Subtraktion oder Intersektion
+    \item Domänenoperationen, wie zum Beispiel Wiederholung, Rotation, Translation und Skalierung
+    \item Distanzdeformationen, wie zum Beispiel Versatz (displacement) und Vermengung/Vermischung (blend)
+    \item Domänendeformationen, wie zum Beispiel ``Verderung'' (twist) und Biegung (bend)
+\end{itemize}
+
+\subsubsection{Isometrien}
+\label{ssubsec:implicit_surfaces_ops_isometries}
+
+Nicht alle Transformationen erhalten dabei die Distanz, welche die
+Distanzfunktion der transformieren Oberfläche zurückgeben würde. In solch einem
+Falle ist die zurückgegebene Distanz nicht die Distanz eines beliebigen Punktes
+im Raum zu dem ihm nähesten Punkt einer impliziten Oberfläche.
+
+Transformationen, welche hingegen distanzerhaltend sind,
+bezeichnet~\cite{hart_sphere_1994} als~\textit{Isometrien}. Dazu zählen
+Rotationen, Translationen aber auch Reflektionen.
+
+Ist $\bm{I}$ eine Isometrie, dann benötigt die zurückgegebene Distanz der
+Distanzfunktion $f(\bm{x})$ \textit{keine Anpassung}.
+
+\begin{gather}
+    d(\bm{x}, \bm{I} \circ f^{-1}(0)) = d(\bm{I}^{-1}(\bm{x}), f^{-1}(0))
+\end{gather}
+
+Wobei $\bm{I}$ eine Isometrie und $f^{-1}(0)$ eine implizite Oberfläche ist.
+
+\subsubsection{Uniforme Skalierung}
+\label{ssubsec:implicit_surfaces_ops_scaling}
+
+Eine Skalierung ist \textit{nicht} distanzerhaltend, daher \textit{erhält} sie die Distanz, welche die
+Distanzfunktion der skalierten Oberfläche zurückgeben würde, \textit{nicht}.
+Somit muss die zurückgegebene Distanz entsprechend angepasst werden.
+
+\cite{hart_sphere_1994} gibt die uniforme Skalierung als Transformation $\bm{S(x)}$  der Form:
+
+\begin{gather}
+    \bm{S(x)} = s \cdot \bm{x}
+\end{gather}
+
+an, wobei $s$ der Skalierungsfaktor ist. Die Invertierung der Skalierung ist gegeben als:
+
+\begin{gather}
+    \bm{S^{-1}(x)} = {1 \over s} \cdot \bm{x}
+\end{gather}
+
+Somit ist die Distanz zu der skalierten impliziten Oberfläche:
+
+\begin{gather}
+    d(\bm{x}, \bm{S}(f^{-1}(0))) = s \cdot d(\bm{S}^{-1}(\bm{x}), f^{-1}(0))
+\end{gather}
+
+Dabei wird die von der Distanzfunktion der skalierten impliziten Oberfläche
+zurückgegebene Distanz mit dem Skalierungsfaktor $s$ multipliziert, was die
+eigentliche Distanzinformation erhält und die Skalierung somit isometrisch
+macht.
+
+\subsubsection{``Verdrehung'' (Twist)}
+\label{ssubsec:implicit_surfaces_ops_twist}
+
+Gemäss~\cite{hart_sphere_1994}[S. 543] werden bei der ``Verdrehung'' einer
+impliziten Oberfläche zwei Achsen (z.B. $x$ und $y$) anhand einer linearen Funktion $a(\cdot)$ in
+Abhängigkeit der dritten Achse (z.B. $z$) rotiert:
+
+\begin{gather}
+    twist(\bm{x}) = \begin{pmatrix} 
+        x \cdot \cos{a(z)} - y \cdot \sin{a(z)},\\
+        x \cdot \sin{a(z)} + y \cdot \cos{a(z)},\\
+        z
+    \end{pmatrix}
+\end{gather}
+
+\subsubsection{Vereinigung}
+\label{ssubsec:implicit_surfaces_ops_union}
+
+Die Vereinigung zweier impliziter Oberflächen $A$ und $B$ wird
+von~\cite{hart_sphere_1994} als minimale Distanz der jeweiligen
+vorzeichenabhängigen  Distanzfunktion $f_{A}$ respektive $f_{B}$ definiert:
+
+\begin{gather}
+    d(\bm{x}, A \cup B) = \min(f_{A}(\bm{x}), f_{B}(\bm{x}))
+\end{gather}
+
+wobei $\bm{x}$ den abzutastenden Punkt im Raum darstellt.
+
+Wie~\ref{hart_sphere_1994} schreibt, ist die Distanz zu einer Liste von
+impliziten Oberflächen die kleinste Distanz der jeweiligen Distanzfunktion.
+Somit erlaubt es die Vereinigung --- neben der Kombination von Objekten ---
+mehrere implizite Oberflächen zu kombinieren, ohne dass diese miteinander in
+Kontakt stehen müssen. So kann beispielsweise eine komplexe Szene modelliert
+werden.
+
+\subsubsection{Subtraktion}
+\label{ssubsec:implicit_surfaces_ops_subtraction}
+
+Um die Operation der Subtraktion zu definieren, wird die Distanz zum Komplement
+eines Objektes $\bm{A}$ verwendet. Dabei wird die Eigenschaft der
+Vorzeichenabhängigkeit von vorzeichenabhängigen Distanzfunktionen genutzt:
+
+\begin{gather}
+    d(\bm{x}, \mathbb{R}^{3} \setminus A) = -f_{A}(\bm{x})
+\end{gather}
+
+Somit kann die Subtraktion zweier impliziter Oberflächen $A$ und $B$
+gemäss~\cite{hart_sphere_1994} als Intersektion eines Objektes $A$ mit der
+Subtraktion des Raumes bzw.\ der Domäne mit einem Objekt $B$ angesehen werden,
+daher folgt:
+
+\begin{align}
+    d(\bm{x}, A - B) &= A \cap (\mathbb{R}^{3} \setminus B) \\
+                     &\geq \max(f_{A}(\bm{x}), -f_{B}(\bm{x}))
+\end{align}
+
+wobei $\bm{x}$ den abzutastenden Punkt im Raum darstellt.
+
+\subsubsection{Intersektion}
+\label{ssubsec:implicit_surfaces_ops_intersection}
+
+Die Intersektion zweier impliziter Oberflächen $A$ und $B$ wird
+von~\cite{hart_sphere_1994} als minimale Distanz der jeweiligen
+vorzeichenabhängigen  Distanzfunktion $f_{A}$ respektive $f_{B}$ definiert:
+
+\begin{gather}
+    d(\bm{x}, A \cap B) \geq \max(f_{A}(\bm{x}), f_{B}(\bm{x}))
+\end{gather}
+
+wobei $\bm{x}$ den abzutastenden Punkt im Raum darstellt.
+
+\subsection{Primitive}
+\label{subsec:implicit_surfaces_primitives}
+
+\cite{hart_sphere_1994} führt in seinem Paper einige (geometrische) Primitve
+auf, welche nachfolgende erläutert werden.
+
+\subsubsection{Ebene}
+\label{ssubsec:implicit_surfaces_primitives_plane}
+
+Die vorzeichenbehaftete Distanz zu einer Ebene $P$ mit einer Einheitsnormalen $\bm{n}$, welche sich mit dem Punkt $\bm{n} \cdot r$ schneidet ist wie folgt:
+
+\begin{gather}
+    d(\bm{x}, P) = \bm{x} \cdot \bm{n} - r
+\end{gather}
+
+wobei $r$ die relative Positionierung der Ebene --- unter Einbezug der Normalen der Ebene im Verhältnis zur Eintheistnormalen $\bm{n}$ --- im Raum darstellt.
+
+\subsubsection{Kugel}
+\label{ssubsec:implicit_surfaces_primitives_sphere}
+
+Eine Kugel ist als eine Menge von Punkten (Locus) in fixem Abstand eines gegebenen Punktes. Die vorzeichenbehaftete Distanz zu einer Kugel $S$, ausgehend vom Ursprung, ist wie folgt:
+
+\begin{gather}
+    d(\bm{x}, S) = \|\bm{x}\| - r
+\end{gather}
+
+wobei $r$ den Radius der Kugel darstellt.
+
+\subsubsection{Zylinder}
+\label{ssubsec:implicit_surfaces_primitives_cylinder}
+
+Die Distanz zu einem um die Z-Achse zentrierten Zylinder mit Einheitsradius wird durch Projektion auf die XY-Ebene und Messung der Distanz zum Einheitskreis berechnet:
+
+\begin{gather}
+    d(\bm{x}, Cyl) = \|(x, y)\| - r
+\end{gather}
+
+wobei $r$ den Radius des Zylinders darstellt, $\bm{x}$ stellt dabei $(x,y,z)$ dar.
+
+\subsubsection{Kegel}
+\label{ssubsec:implicit_surfaces_primitives_cone}
+
+Die Distanz zu einem Kegel, welcher am Ursprsung zentriert und entlang der Z-Achse orientiert ist, wird wie folgt berechnet:
+
+\begin{gather}
+    d(\bm{x}, Cone) = \|(x, y)\| \cdot \cos(\phi) - |z| \cdot \sin(\phi)
+\end{gather}
+
+wobei $\phi$ den Winkel zur Z-Achse darstellt.
+
+\subsubsection{Torus}
+\label{ssubsec:implicit_surfaces_primitives_torus}
+
+Beim Torus handelt es sich um das Produkt zweier Kreise, sowie den Abstand der Kreise:
+
+\begin{gather}
+    d(\bm{x}, T) = \|(\|(x, y)\| - R, z)\| - r
+\end{gather}
+
+wobei $R$ den Aussenradius und $r$ den Innenradius des Torus darstellt. Der Torus ist am Ursprung zentriert und dreht sich um die Z-Achse.
