Provide new bibliography entries

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -139,3 +139,34 @@ Abgerufen am 27. September 2015}
 	year = {1989},
 	pages = {289--296}
 }
+
+@book{arlington_mathematical_applications_group_inc_afips_1968,
+	address = {New York, NY, USA},
+	title = {{AFIPS} '68 ({Fall}, part {I}): {Proceedings} of the {December} 9-11, 1968, {Fall} {Joint} {Computer} {Conference}, {Part} {I}},
+	publisher = {ACM},
+	author = {{Arlington Mathematical Applications Group, Inc}},
+	year = {1968},
+	note = {Library of Congress Catalog Card No.: 55-44701}
+}
+
+@inproceedings{appel_techniques_1968,
+	address = {New York, NY, USA},
+	series = {{AFIPS} '68 ({Spring})},
+	title = {Some {Techniques} for {Shading} {Machine} {Renderings} of {Solids}},
+	url = {http://doi.acm.org/10.1145/1468075.1468082},
+	doi = {10.1145/1468075.1468082},
+	booktitle = {Proceedings of the {April} 30–{May} 2, 1968, {Spring} {Joint} {Computer} {Conference}},
+	publisher = {ACM},
+	author = {Appel, Arthur},
+	year = {1968},
+	pages = {37--45}
+}
+
+@book{glassner_introduction_1989,
+	address = {London, UK, UK},
+	title = {An {Introduction} to {Ray} {Tracing}},
+	isbn = {0-12-286160-4},
+	publisher = {Academic Press Ltd.},
+	editor = {Glassner, Andrew S.},
+	year = {1989}
+}
