Add newly introduced chapter subdivisions

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -292,7 +292,8 @@
 \include{inc/30_scope}
 \include{inc/40_procedure}
 \include{inc/50_theoretical_background}
-\include{inc/60_conclusion}
+\include{inc/60_surfaces}
+\include{inc/70_conclusion}
 %---------------------------------------------------------------------------
 
 % Glossary
